tests/NormalTests/paczka1/fuzzy1/62893247.err
Error in line 5: S64 A882 69,8
Error in line 13: S64 S64 16,00
Error in line 11: iEX A154 40,8
Error in line 20: S64 S64 14,9
Error in line 22: S64 A154 23,9
Error in line 24: kkh A154 49,0
Error in line 23: S64 A882 64,4
Error in line 19: XL2L A882 96,9
Error in line 15: sgjKMr7BZm A252 105,6
Error in line 29: XL2L A252 67,7
